[fix] fix padding-right and font-family of code

--- a/web.html
+++ b/web.html
@@ -11,23 +11,22 @@
       box-sizing: border-box;
       padding: 0;
       margin: 0;
+      font-family: 'Source Code Pro', monospace;
     }
     html, body{
       height: 100%;
       background: #232428;
       color: #f6f7fd;
-      font-family: 'Source Code Pro', monospace;
     }
     body {
-      padding-left: 10vw;
-      padding-top: 5vw;
+      padding: 5vw 10vw 0;
     }
 
     p {
       font-size: 1.5em;
       line-height: 2em;
     }
-    
+
     span.name {
       color: #e6e993;
     }
@@ -40,7 +39,7 @@
     }
 
     code {
-      font-size: 1.75em;
+      font-size: 1.5em;
       background: #f6f7fd;
       color: #232428;
       line-height: 2em;
