[fix] Put code into div to limit selection range

--- a/web.html
+++ b/web.html
@@ -60,7 +60,7 @@
 <body>
   <p><span class="name">init.sh</span> configures the shell environment that I use</p>
   <p>You can install <span class="name">init.sh</span> with</p>
-  <code>curl -fsSL blur.kr/init.sh | sh</code>
+  <div><code>curl -fsSL blur.kr/init.sh | sh</code></div>
   <span class="footer">Made by <a href="https://github.com/blurfx">blurfx</a> with ♥</span>
 </body>
 </html>
