--- a/web.html
+++ b/web.html
@@ -60,7 +60,7 @@
 <body>
   <p><span class="name">init.sh</span> configures the shell environment that I use</p>
   <p>You can install <span class="name">init.sh</span> with</p>
-  <div><code>curl -fsSL blur.kr/init.sh | sh</code></div>
+  <div><code>curl -fsSL xo.dev/init.sh | sh</code></div>
   <p>then restart terminal, run vim and do <span class="name">:PlugInstall</span></p>
   <span class="footer">Made by <a href="https://github.com/blurfx">blurfx</a> with ♥</span>
 </body>
